Add advanced JVM topics for senior developers